testdata/zkc/invalid/cast_invalid_03.zkc
//error:3:7-21:expected type u8
fn f(x:u8, y:u8) -> (r:u16) {
  r = (x + y) as u16
  return
}
